--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
      Copyright 2020 Git.Training 
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Website by Niggas</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Real Niggas Only 
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Real Niggas Corp 2020</p>
 	</footer>
 </body>
 </html>
