--- a/simple.html
+++ b/simple.html
@@ -3,9 +3,9 @@
      Copyright 2020 Git.Training 
 	 Adding changes before rebasing conflicts
 	 
-	 yuuhhh
-	 ahchhhhhhhh yuhhhh
-	 ahchhhhhhhh yuhhhh
+	yung 
+	
+	neegaaaaaa
 -->
 <head>
 	<title>A Neegaday Website</title>
