--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,10 @@
 <!--
      Copyright 2020 Git.Training 
 	 Adding changes before rebasing conflicts
+	 
+	 yuuhhh
+	 ahchhhhhhhh yuhhhh
+	 ahchhhhhhhh yuhhhh
 -->
 <head>
 	<title>A Neegaday Website</title>
