--- a/simple.html
+++ b/simple.html
@@ -3,9 +3,7 @@
      Copyright 2020 Git.Training 
 	 Adding changes before rebasing conflicts
 	 
-	yung 
-	
-	neegaaaaaa
+	gay nigga alert 
 -->
 <head>
 	<title>A Neegaday Website</title>
