local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
      Copyright 2020 Git.Training 
 	 Adding changes before rebasing conflicts
 	 
-	gay nigga alert 
+	gay niggas everywhere
 -->
 <head>
 	<title>A Neegaday Website</title>
