--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
      Copyright 2020 Git.Training 
 	 Adding changes before rebasing conflicts
 	 
-	gay niggas everywhere
+	gay niggas everyday, but you know how it baaeeee
 -->
 <head>
 	<title>A Neegaday Website</title>
