changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 	gay niggas everyday, but you know how it baaeeee
 -->
 <head>
-	<title>A Neegaday Website</title>
+	<title>A Neegaday from the hood Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
